# valkey-timeseries

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.source  Makefile  README.md  build.rs  build.sh  build_schema.sh  docker-compose.cluster.yml  docker-compose.data.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  valkey.conf
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: allocations.rs  decode.rs  encode.rs  fast_path.rs  promql_engine.rs  query_scan.rs
benches/support/: generators.rs  mod.rs
clients/rust/valkey-timeseries-fred/: Cargo.toml  README.md
clients/rust/valkey-timeseries-fred/examples/: basic.rs
clients/rust/valkey-timeseries-fred/src/: lib.rs  options.rs  types.rs
clients/rust/valkey-timeseries-fred/tests/: options.rs
docs/: COMMANDS.md  MetricSQL.md  benchmark-plan.md  bulk-ingest-duplication-review.md  config.md  fanout-acl-user-propagation.md  keyConcepts.md  mrange-aggregation-pushdown-plan.md  multi-aggregation-plan.md  overview.md
docs/commands/: add.md  addbulk.md  alter.md  card.md  collate.md  create.md  del.md  get.md  index.md  ingest.md  join.md  labelnames.md  labelvalues.md  mdel.md  mget.md  mrange.md  outliers.md  query.excalidraw  query.md  query_range.md  range.md  revrange.md  stats.md  ts._debug.md  ts.autocorrelation.md  ts.autoforcast.md  ts.autotrend.md  ts.backtest.md  ts.createrule.md  ts.decompose.md  ts.features.md  ts.fillgaps.md  ts.forecast.md  ts.join.md  ts.labelnames.md  ts.labelnamesearch.md  ts.labelstats.md  ts.labelvalues.md  ts.metricnames.md  ts.mrange.md  (+12 more)
docs/topics/: eda-with-python.md  filter-syntax.md  label-discovery.md
scripts/: build-docker.sh  docker-entrypoint.sh  load-sample-data.py
src/: arg_types.rs  config.rs  error.rs  error_consts.rs  lib.rs  server_events.rs
src/aggregators/: aggr.rs  aggregate_iterator.rs  filtered.rs  handlers.rs  handlers_tests.rs  iterator.rs  kahan.rs  mod.rs  partial_reducer.rs
src/analysis/: README.md  error.rs  mod.rs
src/anomaly/: anomalies.rs  array_2d.rs  error.rs  mod.rs
src/commands/: add.rs  add_bulk.rs  alter_series.rs  anomalies.rs  anomaly.rs  arg_parse.rs  arg_types.rs  card.rs  card_fanout_operation.rs  command_args.rs  command_parser.rs  create_rule.rs  create_series.rs  del.rs  delete_rule.rs  fanout.request.proto  fanout.response.proto  forecast_utils.rs  get.rs  incr_decr_by.rs  info.rs  ingest.rs  join.rs  label_names.rs  label_names_fanout_command.rs  label_names_fanout_operation.rs  label_search_utils.rs  label_stats.rs  label_stats_fanout_command.rs  label_stats_fanout_operation.rs  label_values.rs  label_values_fanout_command.rs  label_values_fanout_operation.rs  madd.rs  madd_bulk.rs  mdel.rs  mdel_fanout_command.rs  mdel_fanout_operation.rs  mget.rs  mget_fanout_command.rs  (+75 more)
src/common/: alloc.rs  arc_interner.rs  async_runtime.rs  binary_search.rs  binop.rs  bitset.rs  constants.rs  context.rs  countdown_latch.rs  db.rs  encoding.rs  humanize.rs  ids.rs  interner.rs  logging.rs  math.rs  mod.rs  rdb.rs  reentrant_context.rs  replies.rs  rounding.rs  serialization.rs  string_interner.rs  sync.rs  time.rs  timer.rs  types.rs  unit_vec.rs
src/fanout/: README.md  acl.rs  blocked_client.rs  cluster.rs  cluster_api.rs  cluster_map.rs  cluster_message.rs  cluster_migrations.rs  cluster_rpc.rs  coordinator.rs  error.rs  fanout_client_command.rs  fanout_command.rs  fanout_context.rs  fanout_error.rs  fanout_message.rs  fanout_operation.rs  fanout_targets.rs  mod.rs  registry.rs  results_tracker.rs  serialization.rs  simple_fanout_operation.rs  snowflake.rs  types.rs  utils.rs
src/iterators/: aggregator.rs  filtered_sample_iterator.rs  group_aggregation_iter.rs  mod.rs  multi_series_row_iter.rs  multi_series_sample_iter.rs  reduce_iterator.rs  row_reducer.rs  sample_iter.rs  sample_merge_iterator.rs  sample_reducer.rs  sample_slice_iterator.rs  shared_vec_iter.rs  timeseries_range_iterator.rs  timestamp_filter_iterator.rs  utils.rs  vec_sample_iterator.rs
src/join/: asof.rs  join_asof_iter.rs  join_full_iter.rs  join_handler.rs  join_handler_tests.rs  join_inner_iter.rs  join_iter.rs  join_left_exclusive_iter.rs  join_left_iter.rs  join_reducer.rs  join_right_exclusive_iter.rs  join_right_iter.rs  mod.rs  sorted_join_semi.rs
src/labels/: filters.rs  hash.rs  interned_metric_name.rs  label.rs  labels_struct.rs  matchers.rs  metric_name.rs  mod.rs  regex.rs  regex_utils.rs
src/module/: arg_parse.rs  mod.rs  result.rs  series_data_type.rs  server_events.rs  utils.rs
src/parser/: duration.rs  lex.rs  metric_name.rs  mod.rs  number.rs  parse_error.rs  series_selector.rs  series_selector_tests.rs  timestamp.rs  utils.rs
src/promql/: README.md  error.rs  hashers.rs  mod.rs  model.rs  time.rs  types.proto  utils.rs
src/query/: bench_test.rs  cluster.rs  config.rs  datasource.rs  handlers.rs  matchers.rs  mod.rs  query_tests.rs  query_utils.rs  test_metric_storage.rs  test_utils.rs  ts_metric_storage.rs  types.rs
src/series/: acl.rs  background_tasks.rs  bulk_add.rs  compaction.rs  compaction_policy.rs  compaction_rule.rs  defrag.rs  digest.rs  guard.rs  merge.rs  (+19 more)
tests/: _test_timeseries_acls.py  _test_ts_query_result.py  common.py  conftest.py  data_helpers.py  outlier_result.py  query_result.py  run.sh  test_acls.py  test_aofrewrite.py  test_case.py  test_commands.py  test_compactions_add.py  test_compactions_del.py  test_debug.py  test_del.py  test_dump_restore.py  test_flushdb.py  test_keyspace.py  test_move.py  test_outliers.py  test_queryindex_prometheus.py  test_rename.py  test_replication.py  test_save_and_restore.py  test_server_events.py  test_swapdb.py  test_timeseries_acls.py  test_timeseries_add.py  test_timeseries_addbulk.py  test_timeseries_alter.py  test_timeseries_aofrewrite.py  test_timeseries_basic.py  test_timeseries_card.py  test_timeseries_card_cme.py  test_timeseries_command.py  test_timeseries_config.py  test_timeseries_create.py  test_timeseries_createrule.py  test_timeseries_decrby.py  (+107 more)
tools/: compression_report.rs  compression_report.sh
(+338 files in other folders)
