[package]
name = "valkey-timeseries"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"
readme = "README.md"
repository = "https://github.com/ccollie/valkey-timeseries"
homepage = "https://github.com/ccollie/valkey-timeseries"
description = "A Timeseries data type for Valkey"

[dependencies]
ahash = { version = "0.8.12", features = ["std"] }
blart = "0.4.0"
bon = "3.8"
byte-pool = "0.2.4"
cfg-if = "1.0.3"
croaring = "2.5"
dashmap = "6.1"
enquote = "1.1.0"
enum_dispatch = "0.3.13"
get-size2 = { version = "0.7", features = ["derive"] }
hashify = { version = "0.2.7" }
linkme = "0.3.33"
logos = "0.15.1"
orx-parallel = "3.3.0"
min-max-heap = "1.3.0"
num-traits = "0.2.19"
joinkit = "0.2.0"
lazy_static = "1.5.0"
papaya = "0.2.3"
pco = "0.4.6"
prost = "0.14.1"
rand = { version = "0.9.2", features = ["small_rng"] }
smallvec = { version = "2.0.0-alpha.11", features = ["std"] }
speedate = "0.17.0"
thiserror = "2.0.17"
topo_sort = "0.4.0"
valkey-module = "0.1.10"
valkey-module-macros = "0.1.10"
rayon-core = "1.13.0"
regex = "1.12.1"
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
logger-rust = "0.2.12"
log = "0.4.28"

[dev-dependencies]
test-case = "3.3.1"
serial_test = { version = "3.2.0", default-features = false}

[build-dependencies]
prost-build = "0.14.1"

[lib]
name="valkey_timeseries"
crate-type=["cdylib"]

[features]
default = ["min-valkey-compatibility-version-8-0", "croaring/alloc"]
enable-system-alloc = ["valkey-module/enable-system-alloc"]
min-valkey-compatibility-version-8-0 = ["valkey-module/min-valkey-compatibility-version-8-0"]
valkey_8_0 = []  # Valkey-timeseries is intended to be loaded on server versions >= Valkey 8.1, and by default it is built this way (unless this flag is provided). It is however compatible with Valkey version 8.0 if the user explicitly provides this feature flag in their cargo build command.
use-redismodule-api = [] # We don't support this feature flag which is why it is empty.