[package]
name = "valkey-timeseries"
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"
readme = "README.md"
repository = "https://github.com/ccollie/valkey-timeseries"
homepage = "https://github.com/ccollie/valkey-timeseries"
description = "A Timeseries data type for Valkey"

[dependencies]
ahash = { version = "0.8", features = ["std"] }
arc-swap = "1.9"
blart = "0.5"
bon = "3.9"
byte-pool = "0.2.4"
cfg-if = "1.0.4"
croaring = "2.6"
enquote = "1.1.0"
enum_dispatch = "0.3.13"
get-size2 = { version = "0.10.2", features = ["derive"] }
hashify = { version = "0.2" }
itertools = "0.14"
linkme = "0.3"
logos = "0.16"
orx-parallel = "3.4"
min-max-heap = "1.3"
num-traits = "0.2"
joinkit = "0.2.0"
krcf = "0.4"
papaya = "0.2"
pco = "1.0"
prost = "0.14"
rand = { version = "0.10" }
rand_distr = "0.6"
smallvec = "1.15.2"
speedate = "0.17"
thiserror = "2.0"
topo_sort = "0.4.0"
valkey-module = "0.1.11"
valkey-module-macros = "0.1.11"
range-set-blaze = "0.6.1"
rayon-core = "1.13"
regex = "1"
strum = { version = "0.28", features = ["derive"] }
strum_macros = "0.28"
simd-json = "0.17.0"
log = "0.4"
statrs = "0.18"
welch-sde = "0.1.0"
regex-syntax = "0.8.10"
crc16 = "0.4.0"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
rand = "0.10"
rand_distr = "0.6"
test-case = "3.3"
serial_test = { version = "3.5", default-features = false }
proptest = "1"

[build-dependencies]
prost-build = "0.14"

[lib]
name = "valkey_timeseries"
# Produce both a cdylib for embedding into Valkey and an rlib so the crate
# can be linked against by Rust integration tests and examples.
crate-type = ["cdylib", "rlib"]
bench = false

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "decode"
harness = false

[[bench]]
name = "query_scan"
harness = false

[[bench]]
name = "allocations"
harness = false

[[bin]]
name = "compression_report"
path = "tools/compression_report.rs"

[features]
default = ["min-valkey-compatibility-version-8-0", "croaring/alloc"]
enable-system-alloc = ["valkey-module/enable-system-alloc"]
min-valkey-compatibility-version-8-0 = ["valkey-module/min-valkey-compatibility-version-8-0"]
use-redismodule-api = [] # We don't support this feature flag which is why it is empty.