[package]
name = "valkey-timeseries-fred"
version = "0.1.0"
edition = "2021"
description = "Async Rust client for valkey-timeseries built on fred"
license = "BSD-3-Clause"
repository = "https://github.com/ccollie/valkey-timeseries"
readme = "README.md"

[dependencies]
fred = "7"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
